--- a/src/catalog.html
+++ b/src/catalog.html
@@ -1413,67 +1413,16 @@ title: Главная страница
                                 <span class="filter-block__title_icon"></span>
                             </button>
                             <div class="filter-block__card_content" data-class-element="price">
-                                <label class="main-input__checkbox">
-                                    <input type="checkbox" checked>
-                                    <div class="main-input__checkbox-wrapper">
-                                        <div class="main-input__checkbox-bg"></div>
-                                        <svg fill="none" viewBox="0 0 24 24" class="main-input__checkbox-icon">
-                                            <path stroke-linejoin="round" stroke-linecap="round" stroke-width="3"
-                                                stroke="currentColor" d="M4 12L10 18L20 6"
-                                                class="main-input__check-path"></path>
-                                        </svg>
+                                <div class="catalog-filter__value_block">
+                                    <div class="catalog-filter__value_item">
+                                        <span>₽</span>
+                                        <input type="number" placeholder="от">
                                     </div>
-                                    <span>PC</span>
-                                </label>
-                                <label class="main-input__checkbox">
-                                    <input type="checkbox">
-                                    <div class="main-input__checkbox-wrapper">
-                                        <div class="main-input__checkbox-bg"></div>
-                                        <svg fill="none" viewBox="0 0 24 24" class="main-input__checkbox-icon">
-                                            <path stroke-linejoin="round" stroke-linecap="round" stroke-width="3"
-                                                stroke="currentColor" d="M4 12L10 18L20 6"
-                                                class="main-input__check-path"></path>
-                                        </svg>
+                                    <div class="catalog-filter__value_item">
+                                        <span>₽</span>
+                                        <input type="number" placeholder="до">
                                     </div>
-                                    <span>Xbox One</span>
-                                </label>
-                                <label class="main-input__checkbox">
-                                    <input type="checkbox">
-                                    <div class="main-input__checkbox-wrapper">
-                                        <div class="main-input__checkbox-bg"></div>
-                                        <svg fill="none" viewBox="0 0 24 24" class="main-input__checkbox-icon">
-                                            <path stroke-linejoin="round" stroke-linecap="round" stroke-width="3"
-                                                stroke="currentColor" d="M4 12L10 18L20 6"
-                                                class="main-input__check-path"></path>
-                                        </svg>
-                                    </div>
-                                    <span>Xbox X/S</span>
-                                </label>
-                                <label class="main-input__checkbox">
-                                    <input type="checkbox">
-                                    <div class="main-input__checkbox-wrapper">
-                                        <div class="main-input__checkbox-bg"></div>
-                                        <svg fill="none" viewBox="0 0 24 24" class="main-input__checkbox-icon">
-                                            <path stroke-linejoin="round" stroke-linecap="round" stroke-width="3"
-                                                stroke="currentColor" d="M4 12L10 18L20 6"
-                                                class="main-input__check-path"></path>
-                                        </svg>
-                                    </div>
-                                    <span>PS4</span>
-                                </label>
-                                <label class="main-input__checkbox">
-                                    <input type="checkbox">
-                                    <div class="main-input__checkbox-wrapper">
-                                        <div class="main-input__checkbox-bg"></div>
-                                        <svg fill="none" viewBox="0 0 24 24" class="main-input__checkbox-icon">
-                                            <path stroke-linejoin="round" stroke-linecap="round" stroke-width="3"
-                                                stroke="currentColor" d="M4 12L10 18L20 6"
-                                                class="main-input__check-path"></path>
-                                        </svg>
-                                    </div>
-                                    <span>PS4</span>
-                                </label>
-                                <button class="filter-block__card_more" type="button">Показать все</button>
+                                </div>
                             </div>
                         </div>
                         <div class="filter-block__card filter-block__category">
@@ -1668,36 +1617,53 @@ title: Главная страница
                                 <span class="filter-block__title_icon"></span>
                             </button>
                             <div class="filter-block__card_content" data-class-element="year">
-                                <label class="main-input__checkbox">
-                                    <input type="checkbox" checked>
-                                    <div class="main-input__checkbox-wrapper">
-                                        <div class="main-input__checkbox-bg"></div>
-                                        <svg fill="none" viewBox="0 0 24 24" class="main-input__checkbox-icon">
-                                            <path stroke-linejoin="round" stroke-linecap="round" stroke-width="3"
-                                                stroke="currentColor" d="M4 12L10 18L20 6"
-                                                class="main-input__check-path"></path>
-                                        </svg>
+                                <div class="catalog-filter__value_block">
+                                    <div class="catalog-filter__value_item">
+                                        <div class="custom-select">
+                                            <select>
+                                                <option value="0">От</option>
+                                                <option value="1">Audi</option>
+                                                <option value="2">BMW</option>
+                                                <option value="3">Citroen</option>
+                                                <option value="4">Ford</option>
+                                                <option value="5">Honda</option>
+                                            </select>
+                                        </div>
                                     </div>
-                                    <span>Single player</span>
-                                </label>
-                                <label class="main-input__checkbox">
-                                    <input type="checkbox">
-                                    <div class="main-input__checkbox-wrapper">
-                                        <div class="main-input__checkbox-bg"></div>
-                                        <svg fill="none" viewBox="0 0 24 24" class="main-input__checkbox-icon">
-                                            <path stroke-linejoin="round" stroke-linecap="round" stroke-width="3"
-                                                stroke="currentColor" d="M4 12L10 18L20 6"
-                                                class="main-input__check-path"></path>
-                                        </svg>
+                                    <div class="catalog-filter__value_item">
+                                        <div class="custom-select">
+                                            <select>
+                                                <option value="0">До</option>
+                                                <option value="1">Audi</option>
+                                                <option value="2">BMW</option>
+                                                <option value="3">Citroen</option>
+                                                <option value="4">Ford</option>
+                                                <option value="5">Honda</option>
+                                            </select>
+                                        </div>
                                     </div>
-                                    <span>Cooperative</span>
-                                </label>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="catalog-page__cards">
                     <div class="catalog-cards__block">
+                        <div class="catalog-cards__item">
+                            {{> cart }}
+                        </div>
+                        <div class="catalog-cards__item">
+                            {{> cart }}
+                        </div>
+                        <div class="catalog-cards__item">
+                            {{> cart }}
+                        </div>
+                        <div class="catalog-cards__item">
+                            {{> cart }}
+                        </div>
+                        <div class="catalog-cards__item">
+                            {{> cart }}
+                        </div>
                         <div class="catalog-cards__item">
                             {{> cart }}
                         </div>
@@ -1756,7 +1722,7 @@ title: Главная страница
         </div>
     </div>
 
-    <section class="catalog-filter">
+    <!-- <section class="catalog-filter">
         <div class="container">
             <div class="catalog-filter__info arrow-divide">
 
@@ -1869,7 +1835,7 @@ title: Главная страница
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section class="catalog-cards">
         <div class="container">
