--- a/src/basket.html
+++ b/src/basket.html
@@ -40,7 +40,7 @@ title: Корзина
                     <div class="basket-page__card">
 
                         <div class="basket-page__card_img">
-                            <img class="basket-page__card_img_item" src="https://via.placeholder.com/600x300" alt="">
+                            <img class="basket-page__card_img_item" src="https://placehold.co/600x400" alt="">
                         </div>
 
                         <div class="basket-page__card_content">
@@ -113,7 +113,7 @@ title: Корзина
                     <div class="basket-page__card">
 
                         <div class="basket-page__card_img">
-                            <img class="basket-page__card_img_item" src="https://via.placeholder.com/600x300" alt="">
+                            <img class="basket-page__card_img_item" src="https://placehold.co/600x400" alt="">
                         </div>
 
                         <div class="basket-page__card_content">
@@ -186,7 +186,7 @@ title: Корзина
                     <div class="basket-page__card">
 
                         <div class="basket-page__card_img">
-                            <img class="basket-page__card_img_item" src="https://via.placeholder.com/600x300" alt="">
+                            <img class="basket-page__card_img_item" src="https://placehold.co/600x400" alt="">
                         </div>
 
                         <div class="basket-page__card_content">
@@ -374,7 +374,7 @@ title: Корзина
                             <div class="basket-page__others_block">
                                 <div class="basket-page__card">
                                     <div class="basket-page__card_img">
-                                        <img class="basket-page__card_img_item" src="https://via.placeholder.com/600x300" alt="">
+                                        <img class="basket-page__card_img_item" src="https://placehold.co/600x400" alt="">
                                     </div>
                                     <div class="basket-page__card_content">
 
@@ -408,7 +408,7 @@ title: Корзина
 
                                 <div class="basket-page__card">
                                     <div class="basket-page__card_img">
-                                        <img class="basket-page__card_img_item" src="https://via.placeholder.com/600x300" alt="">
+                                        <img class="basket-page__card_img_item" src="https://placehold.co/600x400" alt="">
                                     </div>
                                     <div class="basket-page__card_content">
 
@@ -442,7 +442,7 @@ title: Корзина
 
                                 <div class="basket-page__card">
                                     <div class="basket-page__card_img">
-                                        <img class="basket-page__card_img_item" src="https://via.placeholder.com/600x300" alt="">
+                                        <img class="basket-page__card_img_item" src="https://placehold.co/600x400" alt="">
                                     </div>
                                     <div class="basket-page__card_content">
 
