--- a/src/mobile-games.html
+++ b/src/mobile-games.html
@@ -5,7 +5,7 @@ title: Мобильные игры
 
 <main class="main-new">
 
-    <section class="mobile-game-timer">
+    <!-- <section class="mobile-game-timer">
         <div class="container">
             <div class="mobile-game-timer__border">
                 <div class="mobile-game-timer__block">
@@ -46,7 +46,7 @@ title: Мобильные игры
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section class="mobile-game-cards">
         <div class="container">
