--- a/src/catalog.html
+++ b/src/catalog.html
@@ -1308,7 +1308,7 @@ title: Главная страница
                 </div>
                 <div class="catalog-page__filter">
                     <div class="filter-block">
-                        <div class="filter-block__button">
+                        <button class="filter-block__button add-class-btn active" data-class-target="js-filter" data-class-name="active">
                             <div class="filter-block__heading">
                                 <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -1330,8 +1330,8 @@ title: Главная страница
                                         fill="#83878F" />
                                 </svg>
                             </div>
-                        </div>
-                        <div class="filter-block__content">
+                        </button>
+                        <div class="filter-block__content active" data-class-element="js-filter">
                             <div class="filter-block__search">
                                 <div class="new-search-block">
                                     <img class="new-search-block__img" src="assets/images/new-icons/search.svg" alt="">
