--- a/src/mobile-games.html
+++ b/src/mobile-games.html
@@ -1335,20 +1335,19 @@ title: Мобильные игры
             </div>
 
             <div class="catalog-cards__more">
-                <a href="#" class="more-btn">Загрузить еще</a>
+                <button type="button" class="more-btn">Загрузить еще</button>
                 <div class="catalog-cards__pagination">
                     <nav class="pagination">
                         <ul class="pagination-list">
                             <li class="pagination-item">
-                                <a class="pagination-link" href="#">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="46" height="37" viewBox="0 0 46 37"
-                                        fill="none">
-                                        <rect width="46" height="37" rx="5" fill="#282725"></rect>
+                                <button type="button" class="pagination-link new-arrow-left">
+                                    <svg width="12" height="19" viewBox="0 0 12 19" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
                                         <path
-                                            d="M32 17C32.5523 17 33 17.4477 33 18C33 18.5523 32.5523 19 32 19L32 17ZM13.2929 18.7071C12.9024 18.3166 12.9024 17.6834 13.2929 17.2929L19.6569 10.9289C20.0474 10.5384 20.6805 10.5384 21.0711 10.9289C21.4616 11.3195 21.4616 11.9526 21.0711 12.3431L15.4142 18L21.0711 23.6569C21.4616 24.0474 21.4616 24.6805 21.0711 25.0711C20.6805 25.4616 20.0474 25.4616 19.6569 25.0711L13.2929 18.7071ZM32 19L14 19L14 17L32 17L32 19Z"
-                                            fill="#FFFEFC"></path>
+                                            d="M2.83984 8.57688C3.52064 8.57688 4.07254 9.12877 4.07254 9.80957C4.07254 10.4904 3.52064 11.0423 2.83984 11.0423V8.57688ZM1.17455 10.6812C0.693152 10.1998 0.693152 9.41932 1.17455 8.93793L9.01935 1.09312C9.50075 0.611727 10.2812 0.611727 10.7626 1.09312C11.244 1.57452 11.244 2.35502 10.7626 2.83641L3.78948 9.80957L10.7626 16.7827C11.244 17.2641 11.244 18.0446 10.7626 18.526C10.2812 19.0074 9.50075 19.0074 9.01935 18.526L1.17455 10.6812ZM2.83984 11.0423H2.04619V8.57688H2.83984V11.0423Z"
+                                            fill="#EBE2D0"></path>
                                     </svg>
-                                </a>
+                                </button>
                             </li>
                             <li class="pagination-item"><a class="pagination-link _active" href="#">1</a></li>
                             <li class="pagination-item"><a class="pagination-link" href="#">2</a></li>
@@ -1356,16 +1355,14 @@ title: Мобильные игры
                             <li class="pagination-item"><a class="pagination-link" href="#">...</a></li>
                             <li class="pagination-item"><a class="pagination-link" href="#">20</a></li>
                             <li class="pagination-item">
-                                <a class="pagination-link" href="#">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="46" height="37" viewBox="0 0 46 37"
-                                        fill="none">
-                                        <rect width="46" height="37" rx="5" transform="matrix(-1 0 0 1 46 0)"
-                                            fill="#282725"></rect>
+                                <button class="pagination-link new-arrow-right" type="button">
+                                    <svg width="12" height="19" viewBox="0 0 12 19" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
                                         <path
-                                            d="M14 17C13.4477 17 13 17.4477 13 18C13 18.5523 13.4477 19 14 19L14 17ZM32.7071 18.7071C33.0976 18.3166 33.0976 17.6834 32.7071 17.2929L26.3431 10.9289C25.9526 10.5384 25.3195 10.5384 24.9289 10.9289C24.5384 11.3195 24.5384 11.9526 24.9289 12.3431L30.5858 18L24.9289 23.6569C24.5384 24.0474 24.5384 24.6805 24.9289 25.0711C25.3195 25.4616 25.9526 25.4616 26.3431 25.0711L32.7071 18.7071ZM14 19L32 19L32 17L14 17L14 19Z"
-                                            fill="#FFFEFC"></path>
+                                            d="M9.16016 8.37034C8.47936 8.37034 7.92746 8.92223 7.92746 9.60303C7.92746 10.2838 8.47936 10.8357 9.16016 10.8357V8.37034ZM10.8255 10.4747C11.3068 9.99328 11.3068 9.21278 10.8255 8.73138L2.98065 0.88658C2.49925 0.405184 1.71876 0.405184 1.23736 0.88658C0.755964 1.36798 0.755964 2.14847 1.23736 2.62987L8.21052 9.60303L1.23736 16.5762C0.755964 17.0576 0.755964 17.8381 1.23736 18.3195C1.71876 18.8009 2.49925 18.8009 2.98065 18.3195L10.8255 10.4747ZM9.16016 10.8357H9.95381V8.37034H9.16016V10.8357Z"
+                                            fill="#EBE2D0"></path>
                                     </svg>
-                                </a>
+                                </button>
                             </li>
                         </ul>
                     </nav>
