--- a/src/steam.html
+++ b/src/steam.html
@@ -290,6 +290,7 @@ title: Пополнение стим
             <form class="steam-login__block">
                 <div class="steam-login__form">
                     <div class="form-group">
+                        <input class="steam-login__form_input form-input" placeholder="Ваш логин STEAM">
                         <svg class="steam-login__form_svg" xmlns="http://www.w3.org/2000/svg" width="22" height="23"
                             viewBox="0 0 22 23" fill="none">
                             <g clip-path="url(#clip0_2449_3069)">
@@ -309,10 +310,10 @@ title: Пополнение стим
                                 </clipPath>
                             </defs>
                         </svg>
-                        <input class="steam-login__form_input form-input" placeholder="Ваш логин STEAM">
                         <button class="steam-login__form_btn form-input__btn">Не могу найти логин</button>
                     </div>
                     <div class="form-group">
+                        <input class="steam-login__form_input form-input" placeholder="Введите сумму пополнения">
                         <svg class="steam-login__form_svg" xmlns="http://www.w3.org/2000/svg" width="22" height="23"
                             viewBox="0 0 22 23" fill="none">
                             <g clip-path="url(#clip0_2449_3069)">
@@ -332,7 +333,6 @@ title: Пополнение стим
                                 </clipPath>
                             </defs>
                         </svg>
-                        <input class="steam-login__form_input form-input" placeholder="Введите сумму пополнения">
                     </div>
                     <div class="steam-login__form_subtitle">Или выберите номинал</div>
                     <div class="steam-login__form_select">
@@ -373,6 +373,8 @@ title: Пополнение стим
 
                     </div>
                     <div class="form-group">
+
+                        <input class="form-input steam-login__form_input" placeholder="У вас есть промокод?">
                         <svg class="steam-login__form_svg" xmlns="http://www.w3.org/2000/svg" width="22" height="23"
                             viewBox="0 0 22 23" fill="none">
                             <g clip-path="url(#clip0_2449_3069)">
@@ -392,7 +394,6 @@ title: Пополнение стим
                                 </clipPath>
                             </defs>
                         </svg>
-                        <input class="form-input steam-login__form_input" placeholder="У вас есть промокод?">
                         <button class="form-input__btn">Подтвердить</button>
                     </div>
                 </div>
@@ -475,7 +476,61 @@ title: Пополнение стим
             </form>
         </div>
     </section>
-    <section class="steam-slider">
+    <section class="new-mobile container">
+        <div class="new-mobile__block">
+            <div class="new-mobile__header">
+                <div class="new-block__title">
+                    <img class="new-block__title_icon" src="assets/images/new-catalog/title-logo.svg" alt="">
+                    <a href="#" class="new-block__title_text">Steam Гифты</a>
+                </div>
+                <div class="new-mobile__arrows">
+                    <button type="button" class="new-arrow-left">
+                        <svg width="12" height="19" viewBox="0 0 12 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M2.83984 8.57688C3.52064 8.57688 4.07254 9.12877 4.07254 9.80957C4.07254 10.4904 3.52064 11.0423 2.83984 11.0423V8.57688ZM1.17455 10.6812C0.693152 10.1998 0.693152 9.41932 1.17455 8.93793L9.01935 1.09312C9.50075 0.611727 10.2812 0.611727 10.7626 1.09312C11.244 1.57452 11.244 2.35502 10.7626 2.83641L3.78948 9.80957L10.7626 16.7827C11.244 17.2641 11.244 18.0446 10.7626 18.526C10.2812 19.0074 9.50075 19.0074 9.01935 18.526L1.17455 10.6812ZM2.83984 11.0423H2.04619V8.57688H2.83984V11.0423Z"
+                                fill="#EBE2D0" />
+                        </svg>
+                    </button>
+                    <button type="button" class="new-arrow-right">
+                        <svg width="12" height="19" viewBox="0 0 12 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M9.16016 8.37034C8.47936 8.37034 7.92746 8.92223 7.92746 9.60303C7.92746 10.2838 8.47936 10.8357 9.16016 10.8357V8.37034ZM10.8255 10.4747C11.3068 9.99328 11.3068 9.21278 10.8255 8.73138L2.98065 0.88658C2.49925 0.405184 1.71876 0.405184 1.23736 0.88658C0.755964 1.36798 0.755964 2.14847 1.23736 2.62987L8.21052 9.60303L1.23736 16.5762C0.755964 17.0576 0.755964 17.8381 1.23736 18.3195C1.71876 18.8009 2.49925 18.8009 2.98065 18.3195L10.8255 10.4747ZM9.16016 10.8357H9.95381V8.37034H9.16016V10.8357Z"
+                                fill="#EBE2D0" />
+                        </svg>
+
+                    </button>
+                </div>
+            </div>
+            <div class="new-mobile__content swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        {{> cart }}
+                    </div>
+                    <div class="swiper-slide">
+                        {{> cart }}
+                    </div>
+                    <div class="swiper-slide">
+                        {{> cart }}
+                    </div>
+                    <div class="swiper-slide">
+                        {{> cart }}
+                    </div>
+                    <div class="swiper-slide">
+                        {{> cart }}
+                    </div>
+                    <div class="swiper-slide">
+                        {{> cart }}
+                    </div>
+                </div>
+
+            </div>
+            <div class="new-index-mobile__btn">
+                <a href="#" class="new-btn new-btn--grey new-btn--fullwidth">Все игры</a>
+            </div>
+        </div>
+    </section>
+
+<!--     <section class="steam-slider">
         <div class="container">
             <div class="game-slider__block">
 
@@ -575,7 +630,7 @@ title: Пополнение стим
 
             </div>
         </div>
-    </section>
+    </section> -->
 </main>
 
 <!-- Modals -->
