--- a/src/reviews.html
+++ b/src/reviews.html
@@ -4,7 +4,7 @@ title: О нас
 ---
 
 <main class="main-new">
-    <section class="container warranty-header">
+    <section class="container static-page-header">
         <div class="static-header">
             <div class="static-header__title">Отзывы</div>
             <img class="static-header__img" src="assets/images/reviews/header-img.png" alt="Отзывы">
