--- a/src/warranty.html
+++ b/src/warranty.html
@@ -4,7 +4,7 @@ title: Гарантии
 ---
 
 <main class="main-new warranty-main">
-    <section class="container warranty-header">
+    <section class="container static-page-header">
         <div class="static-header">
             <div class="static-header__title">Гарантии</div>
             <img class="static-header__img" src="assets/images/warranty/header-img.png" alt="">
