--- a/src/support.html
+++ b/src/support.html
@@ -20,16 +20,138 @@ title: Техническая поддержка
                 <div class="support-page__topics_card">
                     <div class="support-page__topics_title">Название раздела</div>
                     <ul class="support-page__topics_list">
-                        <li class="support-page__topics_item"><a class="support-page__topics_link" href="#">Вопрос или тема в данном разделе базы знаний</a></li>
-                        <li class="support-page__topics_item"><a class="support-page__topics_link" href="#">Вопрос или тема в данном разделе базы знаний</a></li>
-                        <li class="support-page__topics_item"><a class="support-page__topics_link" href="#">Вопрос или тема в данном разделе базы знаний</a></li>
-                        <li class="support-page__topics_item"><a class="support-page__topics_link" href="#">Вопрос или тема в данном разделе базы знаний</a></li>
+                        <li class="support-page__topics_item">
+                            <a class="support-page__topics_link" href="support-topic.html">
+                                Вопрос или тема в данном разделе базы знаний
+                            </a>
+                        </li>
+                        <li class="support-page__topics_item">
+                            <a class="support-page__topics_link" href="support-topic.html">
+                                Вопрос или тема в данном разделе базы знаний
+                            </a>
+                        </li>
+                        <li class="support-page__topics_item">
+                            <a class="support-page__topics_link" href="support-topic.html">
+                                Вопрос или тема в данном разделе базы знаний
+                            </a>
+                        </li>
+                        <li class="support-page__topics_item">
+                            <a class="support-page__topics_link" href="support-topic.html">
+                                Вопрос или тема в данном разделе базы знаний
+                            </a>
+                        </li>
                     </ul>
-                    <div class="support-page__topics_more">
-                        <a href="#">
-                            <span>Ещё вопросы</span>
-                        </a>
-                    </div>
+                    <a href="#" class="support-page__topics_more">
+                        <span>Ещё вопросы</span>
+                        <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <rect width="24.381" height="24.381" rx="4.06349" fill="#22211E" />
+                            <path
+                                d="M14.2227 11.5593C13.8741 11.5593 13.5915 11.8419 13.5915 12.1904C13.5915 12.539 13.8741 12.8216 14.2227 12.8216V11.5593ZM15.0753 12.6367C15.3218 12.3902 15.3218 11.9906 15.0753 11.7441L11.0587 7.72761C10.8123 7.48113 10.4127 7.48113 10.1662 7.72761C9.91971 7.97408 9.91971 8.3737 10.1662 8.62017L13.7364 12.1904L10.1662 15.7607C9.91971 16.0072 9.91971 16.4068 10.1662 16.6533C10.4127 16.8997 10.8123 16.8997 11.0587 16.6533L15.0753 12.6367ZM14.2227 12.8216H14.629V11.5593H14.2227V12.8216Z"
+                                fill="#EBE2D0" />
+                        </svg>
+                    </a>
+                </div>
+                <div class="support-page__topics_card">
+                    <div class="support-page__topics_title">Название раздела</div>
+                    <ul class="support-page__topics_list">
+                        <li class="support-page__topics_item">
+                            <a class="support-page__topics_link" href="support-topic.html">
+                                Вопрос или тема в данном разделе базы знаний
+                            </a>
+                        </li>
+                        <li class="support-page__topics_item">
+                            <a class="support-page__topics_link" href="support-topic.html">
+                                Вопрос или тема в данном разделе базы знаний
+                            </a>
+                        </li>
+                        <li class="support-page__topics_item">
+                            <a class="support-page__topics_link" href="support-topic.html">
+                                Вопрос или тема в данном разделе базы знаний
+                            </a>
+                        </li>
+                        <li class="support-page__topics_item">
+                            <a class="support-page__topics_link" href="support-topic.html">
+                                Вопрос или тема в данном разделе базы знаний
+                            </a>
+                        </li>
+                    </ul>
+                    <a href="#" class="support-page__topics_more">
+                        <span>Ещё вопросы</span>
+                        <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <rect width="24.381" height="24.381" rx="4.06349" fill="#22211E" />
+                            <path
+                                d="M14.2227 11.5593C13.8741 11.5593 13.5915 11.8419 13.5915 12.1904C13.5915 12.539 13.8741 12.8216 14.2227 12.8216V11.5593ZM15.0753 12.6367C15.3218 12.3902 15.3218 11.9906 15.0753 11.7441L11.0587 7.72761C10.8123 7.48113 10.4127 7.48113 10.1662 7.72761C9.91971 7.97408 9.91971 8.3737 10.1662 8.62017L13.7364 12.1904L10.1662 15.7607C9.91971 16.0072 9.91971 16.4068 10.1662 16.6533C10.4127 16.8997 10.8123 16.8997 11.0587 16.6533L15.0753 12.6367ZM14.2227 12.8216H14.629V11.5593H14.2227V12.8216Z"
+                                fill="#EBE2D0" />
+                        </svg>
+                    </a>
+                </div>
+                <div class="support-page__topics_card">
+                    <div class="support-page__topics_title">Название раздела</div>
+                    <ul class="support-page__topics_list">
+                        <li class="support-page__topics_item">
+                            <a class="support-page__topics_link" href="support-topic.html">
+                                Вопрос или тема в данном разделе базы знаний
+                            </a>
+                        </li>
+                        <li class="support-page__topics_item">
+                            <a class="support-page__topics_link" href="support-topic.html">
+                                Вопрос или тема в данном разделе базы знаний
+                            </a>
+                        </li>
+                        <li class="support-page__topics_item">
+                            <a class="support-page__topics_link" href="support-topic.html">
+                                Вопрос или тема в данном разделе базы знаний
+                            </a>
+                        </li>
+                        <li class="support-page__topics_item">
+                            <a class="support-page__topics_link" href="support-topic.html">
+                                Вопрос или тема в данном разделе базы знаний
+                            </a>
+                        </li>
+                    </ul>
+                    <a href="#" class="support-page__topics_more">
+                        <span>Ещё вопросы</span>
+                        <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <rect width="24.381" height="24.381" rx="4.06349" fill="#22211E" />
+                            <path
+                                d="M14.2227 11.5593C13.8741 11.5593 13.5915 11.8419 13.5915 12.1904C13.5915 12.539 13.8741 12.8216 14.2227 12.8216V11.5593ZM15.0753 12.6367C15.3218 12.3902 15.3218 11.9906 15.0753 11.7441L11.0587 7.72761C10.8123 7.48113 10.4127 7.48113 10.1662 7.72761C9.91971 7.97408 9.91971 8.3737 10.1662 8.62017L13.7364 12.1904L10.1662 15.7607C9.91971 16.0072 9.91971 16.4068 10.1662 16.6533C10.4127 16.8997 10.8123 16.8997 11.0587 16.6533L15.0753 12.6367ZM14.2227 12.8216H14.629V11.5593H14.2227V12.8216Z"
+                                fill="#EBE2D0" />
+                        </svg>
+                    </a>
+                </div>
+                <div class="support-page__topics_card">
+                    <div class="support-page__topics_title">Название раздела</div>
+                    <ul class="support-page__topics_list">
+                        <li class="support-page__topics_item">
+                            <a class="support-page__topics_link" href="support-topic.html">
+                                Вопрос или тема в данном разделе базы знаний
+                            </a>
+                        </li>
+                        <li class="support-page__topics_item">
+                            <a class="support-page__topics_link" href="support-topic.html">
+                                Вопрос или тема в данном разделе базы знаний
+                            </a>
+                        </li>
+                        <li class="support-page__topics_item">
+                            <a class="support-page__topics_link" href="support-topic.html">
+                                Вопрос или тема в данном разделе базы знаний
+                            </a>
+                        </li>
+                        <li class="support-page__topics_item">
+                            <a class="support-page__topics_link" href="support-topic.html">
+                                Вопрос или тема в данном разделе базы знаний
+                            </a>
+                        </li>
+                    </ul>
+                    <a href="#" class="support-page__topics_more">
+                        <span>Ещё вопросы</span>
+                        <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <rect width="24.381" height="24.381" rx="4.06349" fill="#22211E" />
+                            <path
+                                d="M14.2227 11.5593C13.8741 11.5593 13.5915 11.8419 13.5915 12.1904C13.5915 12.539 13.8741 12.8216 14.2227 12.8216V11.5593ZM15.0753 12.6367C15.3218 12.3902 15.3218 11.9906 15.0753 11.7441L11.0587 7.72761C10.8123 7.48113 10.4127 7.48113 10.1662 7.72761C9.91971 7.97408 9.91971 8.3737 10.1662 8.62017L13.7364 12.1904L10.1662 15.7607C9.91971 16.0072 9.91971 16.4068 10.1662 16.6533C10.4127 16.8997 10.8123 16.8997 11.0587 16.6533L15.0753 12.6367ZM14.2227 12.8216H14.629V11.5593H14.2227V12.8216Z"
+                                fill="#EBE2D0" />
+                        </svg>
+                    </a>
                 </div>
             </div>
 
