--- a/src/about.html
+++ b/src/about.html
@@ -3,7 +3,7 @@ layout: main
 title: О нас
 ---
 
-<main class="main-new">
+<main class="main-about">
     <section class="about-header">
         <div class="container">
             <div class="about-header__block">
